# kestrel

./: .gitignore  README.md  pyproject.toml  todo.md
.cache/: corpus_analyzer.json
.cache/heir/: analysis_summary.json  semantic_rules.txt  syntactic_patterns.json
.cache/mlir/: analysis_summary.json  semantic_rules.txt  syntactic_patterns.json
.cache/onnx/: analysis_summary.json  semantic_rules.txt  syntactic_patterns.json
.cache/torch/: analysis_summary.json  semantic_rules.txt  syntactic_patterns.json
.cache/triton/: analysis_summary.json  semantic_rules.txt  syntactic_patterns.json
configs/: json.config  mlir.config  sql.config  xml.config
examples/circt/general/: a-0.mlir  add-ids-0.mlir  affine-parallel-unroll-0.mlir  affine-parallel-unroll-1.mlir  affine-parallel-unroll-4.mlir  affine-ploop-unparallelize-0.mlir  affine-ploop-unparallelize-1.mlir  affine-to-scf-0.mlir  annotations-10.mlir  (+424 more)
grammars/: json.ebnf  json.lark  mlir-template.lark  mlir.g4  mlir.lark  sql.lark  sqlite.lark  xml.lark
prompts/: generate_dialect_ops.txt  generate_json.txt  generate_mlir.txt  generate_sql.txt  generate_xml.txt
scripts/: analyze_corpus.py  check_single.py  gcd.py  generate_seeds.py  llg.py  rejection_sampling.py
src/: corpus_analyzer.py  gcd.py  grammar_utils.py  judge.py  lib.py  llg_model.py  llguidance_model.py  mcmc.py  prompt_builder.py  prompt_engine.py  semantic_extractor.py
src/kestrel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_corpus_analyzer.py  test_judge.py  test_prompt_engine.py  test_semantic_extractor.py
(+14082 files in other folders)
