[tool.poetry]
name = "kestrel"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
torch = "^2.6.0"
transformers = "^4.48.3"
transformers-cfg = { git = "https://github.com/epfl-dlab/transformers-CFG.git", branch = "main" }
accelerate = "^1.4.0"
ipywidgets = "^8.1.5"
xgrammar = "0.1.11"
ninja = "^1.11.1.3"
matplotlib = "^3.10.0"
flameprof = "^0.4"
pytest = "^8.3.5"
jsonschema = "^4.23.0"
maturin = {extras = ["zig"], version = "^1.8.2"}
bitsandbytes = "^0.45.3"
psutil = "^7.0.0"
llguidance = "^0.6.31"
openai = "^1.74.0"
tqdm = "^4.67.1"
grammarinator = "^23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
